[package]
name = "bdk_coin_select"
version = "0.2.0"
edition = "2018"
#rust-version = "1.54"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/coin-select"
documentation = "https://docs.rs/bdk_coin_select"
description = "Tools for input selection for making bitcoin transactions."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No dependencies! Please do not add any please!


[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.8"
proptest = "1.4"
bitcoin = "0.30"
